xx Jan 2005: 0.1.3 Miek <miek@miek.nl>
   * hist.sh updated, it goes back for 3 months now


06 Jan 2005: 0.1.2 Miek <miek@miek.nl>
   * All scripts were completely reworked, local
     and remote backing up is now working.
   * End-user script were improved, excl.sh is now
     a working example. Everything is much more 
     enduser friendly
   * Documentation and man pages were improved and
     updated to reflect the modifications in the scripts.
   Code:
   * refactored printing in gfunc.c, this was a minor change.


02 Jan 2005: 0.1.1 Miek <miek@miek.nl>
   * Use strcmp instead of g_ascii_strcasecmp() as
     case is significant in unix fs
   * Don't gzip the files by default with backup.sh
   * added mirror/dump.sh which is an example wrapper
     script for backupping.
   * Manual pages were updated.


31 Dec 2005: 0.1.0 Miek <miek@miek.nl>
   * Bumped version as rdup matures rapidly
   * Small fixes to the scripts 
   * Test infrastructure was added


30 Dec 2005: 0.0.4 Miek <miek@miek.nl>
   * Add the filesize to rdup's output. This change is 
     not backwards compatible. The output now is
     +/-MODE UID GID SIZE FILENAME
     SIZE = filesize in bytes
   * Added explicit timestamp file as suggest by Boris Goldowsky 
     (-N FILE, where the m_time of FILE is taken is the filestamp)
   Scripts:
   * Added remote directory with a script that can be piped
     to 'sftp b - user@remotehost'. This is a poor mans rsync - fully
     working though.
   * catch.sh and throw.sh are another remote backup implementation which
     allow encryption and zipping, only caveat is that the filesize
     MUST not change when fiddling with the contents of a file.
   * added hdup/ directory. The script in there implements the 
     core functionality of hdup2.
   Docs:
   * Started LaTeX document describing features and output
     of rdup and its scripts.
   Source:
   * Removed dump_type, backuptype is now implicitly stored in
     opt_timestamp (0 -> full, !0 -> inc)