@@ -38,7 +38,10 @@ do
                 # add
                 case $typ in
                         0)      # REG
-                        [ -f "$backupdir/$path" ] && mv "$backupdir/$path" "$backupdir/$path$suffix"
+                        if [[ -f "$backupdir/$path" ]]; then
+                                suffix=`mirror_suffix $backupdir/$path`
+                                mv "$backupdir/$path" "$backupdir/$path$suffix"
+                        fi
                         if [[ $fsize -ne 0 ]]; then
                                 # catch
                                 head -c $fsize > "$backupdir/$path"
@@ -59,7 +62,10 @@ do
                         idir=$(( $idir + 1))
                         ;;
                         2)      # LNK, target is in the content! 
-                        [[ -L "$backupdir/$path" ]] && mv "$backupdir/$path" "$backupdir/$path$suffix"
+                        if [[ -L "$backupdir/$path" ]]; then
+                                suffix=`mirror_suffix $backupdir/$path`
+                                mv "$backupdir/$path" "$backupdir/$path$suffix"
+                        fi
                         target=`head -c $fsize`
                         ln -sf "$target" "$backupdir/$path" 
                         chown -h $uid:$gid "$backupdir/$path" 2>/dev/null
@@ -70,6 +76,7 @@ do
                 echo
                 # remove
                 if [[ -e "$backupdir/$path" ]]; then
+                        suffix=`mirror_suffix $backupdir/$path`
                         mv "$backupdir/$path" "$backupdir/$pathsuffix"
                 fi
                 irm=$(( $irm + 1))
