@@ -1,5 +1,7 @@
 xx Jan 2005: 0.1.3 Miek <miek@miek.nl>
    * hist.sh updated, it goes back for 3 months now
+   * mirror.sh/rmirror.sh now create suffixes for backup
+     files based on their creation time
 
 
 06 Jan 2005: 0.1.2 Miek <miek@miek.nl>
